# htmlcompare

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HOWTO-Release.txt  LICENSE.txt  MANIFEST.in  README.md  VERSION.txt  build-and-sign-release.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
htmlcompare/: __init__.py  cli.py  compare.py  compare_css.py  compare_v2.py  elements.py  nodes.py  normalize.py  options.py  parser.py  result.py  testutils.py
htmlcompare/tests/: basic_test.py  comments_test.py  compare_test.py  compare_v2_test.py  doctype_detection_test.py  html_class_attribute_test.py  html_style_attribute_test.py  html_test.py  parser_test.py
scripts/: htmlcompare
