[metadata]
name        = HTMLCompare
version     = file: VERSION.txt
author      = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
license     = MIT


[options]
python_requires = >= 2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

packages = find:
zip_safe = true
include_package_data = true


[bdist_wheel]
universal = 1

