[metadata]
name          = HTMLCompare
version       = file: VERSION.txt
description   = library to compare HTML while ignoring non-functional differences

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/htmlcompare
license       = MIT
license_file  = LICENSE.txt

classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP
	Topic :: Text Processing :: Markup :: HTML
project_urls =
	Code = https://github.com/FelixSchwarz/htmlcompare
	Issue tracker = https://github.com/FelixSchwarz/htmlcompare/issues


[options]
python_requires = >= 2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

packages = find:
zip_safe = true
include_package_data = true

install_requires =
	html5lib
	# tinycss2 only supports Python 3.5+
	tinycss2		; python_version >= '3.5'


[bdist_wheel]
universal = 1

