[metadata]
name          = HTMLCompare
version       = file: VERSION.txt
description   = library to compare HTML while ignoring non-functional differences

long_description = file:README.md
long_description_content_type = text/markdown

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/htmlcompare
license       = MIT
license_file  = LICENSE.txt

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Internet :: WWW/HTTP
    Topic :: Text Processing :: Markup :: HTML
project_urls =
    Code = https://github.com/FelixSchwarz/htmlcompare
    Issue tracker = https://github.com/FelixSchwarz/htmlcompare/issues


[options]
python_requires = >= 3.9

packages = find:
zip_safe = true
include_package_data = true
scripts =
    scripts/htmlcompare

install_requires =
    html5lib
    tinycss2

[options.extras_require]
testing =
    pytest
